# GPClients

./: CMakeLists.txt  EphemeralPercent.cpp  EphemeralPercent.hpp  FeatureEvalOp.cpp  FeatureEvalOp.hpp  Main.cpp  Mat.hpp  README.md  gpthread.cpp  gpthread.h  gpudp.cpp  gpudp.h  mainwindow.cpp  mainwindow.h  mainwindow.ui
Operators/: MatAdd.cpp  MatBlur.cpp  MatIx.cpp  MatIy.cpp  MatMul.cpp  MatMulDou.cpp  MatSquare.cpp  MatSub.cpp
Operators/Impl/: MatAdd.hpp  MatBlur.hpp  MatIx.hpp  MatIy.hpp  MatMul.hpp  MatMulDou.hpp  MatSquare.hpp  MatSub.hpp
